--- a/Objects/简单流水灯.build_log.htm
+++ b/Objects/简单流水灯.build_log.htm
@@ -18,17 +18,20 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.100.0.0
 Dialog DLL:      DP51.DLL V2.62.0.1 
 <h2>Project:</h2>
-E:\keil\上课练习的工程\呼吸灯\AD.uvproj
+E:\keil\上课练习的工程\form\AD.uvproj
 Project File Date:  09/25/2019
 
 <h2>Output:</h2>
 Build target 'Target 1'
+assembling STARTUP.A51...
+compiling main.c...
 compiling display.c...
+compiling pwm.c...
 linking...
-Program Size: data=35.2 xdata=0 code=1357
+Program Size: data=35.2 xdata=0 code=1359
 creating hex file from ".\Objects\简单流水灯"...
 ".\Objects\简单流水灯" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
